--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   <div id="topbar" class="fixed-top d-flex align-items-center ">
     <div class="container d-flex align-items-center justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@example.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +1 5589 55488 55
+        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">mazda@mazdacontact.com</a>
+        <i class="bi bi-phone-fill phone-icon"></i> +57 5589 55488 55
       </div>
       <div class="cta d-none d-md-block">
         <a href="#about" class="scrollto">Contacta un asesor</a>
@@ -102,26 +102,26 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Bienvenido a <span>Mazda</span></h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+          <p class="animate__animated animate__fadeInUp">En mazda fabricamos autos que hacen que la conducción importe. Es por eso que diseñamos cada Mazda para inspirar, emocionar y, sobre todo, para alegrar a la gente. Esta filosofía guía todo lo que hacemos. Desde la tecnología, hasta el diseño y la seguridad.</p>
+          <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
         </div>
       </div>
 
       <!-- Slide 2 -->
       <div class="carousel-item">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+          <h2 class="animate__animated animate__fadeInDown">Conoce nuestros Hibridos</h2>
+          <p class="animate__animated animate__fadeInUp">Nuestros motores e-Skyactiv G con el sistema Mazda Mild Hybrid producen menos emisiones de CO2 a la vez que logran un rendimiento excepcional y se complementan para respaldar la eficiencia y el rendimiento del vehículo en cada camino, dándote además de eficiencia superior, un importante ahorro de combustible.</p>
+          <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
         </div>
       </div>
 
       <!-- Slide 3 -->
       <div class="carousel-item">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+          <h2 class="animate__animated animate__fadeInDown">Conoce la experiancia Mazda</h2>
+          <p class="animate__animated animate__fadeInUp">Visita nuestro blog, conoce las nuevas novedades en mazda y conoce la experiencia mazda de primera mano por parte de nuestros clientes.</p>
+          <!-- <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
         </div>
       </div>
 
