--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">INICIO</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">VEHÍCULOS</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+          <li><a class="nav-link scrollto" href="#about">SOBRE NOSOTROS</a></li>
+          <li><a class="nav-link scrollto" href="#services">SERVICIOS</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
+          <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
           <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -85,7 +85,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li>-->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -341,7 +341,7 @@
     </section><!-- End About Us Section -->
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients">
+    <!--<section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
 
         <div class="clients-slider swiper">
@@ -359,7 +359,7 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section>--><!-- End Clients Section -->
 
     <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us">
@@ -368,10 +368,10 @@
         <div class="row">
 
           <div class="col-lg-5 align-items-stretch position-relative video-box" style='background-image: url("assets/img/why-us.jpg");' data-aos="fade-right">
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn mb-4"></a>
+            <a href="https://www.youtube.com/watch?v=UyoZA0FvZfI" class="glightbox play-btn mb-4"></a>
           </div>
 
-          <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch" data-aos="fade-left">
+          <!-- <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch" data-aos="fade-left">
 
             <div class="content">
               <h3>Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong></h3>
@@ -412,7 +412,7 @@
               </ul>
             </div>
 
-          </div>
+          </div>-->
 
         </div>
 
