--- a/mazda2sport-details.html
+++ b/mazda2sport-details.html
@@ -62,7 +62,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">INICIO</a></li>
+          <li><a class="nav-link scrollto" href="index.html">INICIO</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">VEHÍCULOS</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
@@ -101,10 +101,10 @@
       <div class="container">
 
         <ol>
-          <li><a href="index.html">Home</a></li>
-          <li>Portfolio Details</li>
+          <li><a href="index.html">Inicio</a></li>
+          <li>MAZDA 2 SPORT</li>
         </ol>
-        <h2>Portfolio Details</h2>
+        <h2>RECORRE LA GRANDEZA</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -120,25 +120,11 @@
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper slider-car">
               <div class="swiper-wrapper align-items-center">
-                
-                
                 <br>
-                <canvas class="col-lg-12 col-md-8 col-sm-12 col-xs-12" id="canvas" width="900" height="550"></canvas>
-                <!-- <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
-                </div> -->
-
+                <canvas class="col-lg-12 col-md-12 col-sm-12" id="canvas" width="900" height="550"></canvas>
               </div>
               <!-- <div class="swiper-pagination"></div> -->
-              <input class="col-lg-12 col-md-1 col-sm-1 col-xs-1" type="range" min="1" max="25" step="1" value="1" id="slider">
+              <input class="col-lg-12 col-md-12 col-sm-12" type="range" min="1" max="25" step="1" value="1" id="slider">
               <!-- <input type="range" min="1" max="25" step="1" value="1" id="slider">
               <canvas id="canvas" width="960" height="540"></canvas> -->
 
@@ -147,18 +133,19 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>MAZDA 2 SPORT</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li>Diseñado para convertir cada recorrido en una experiencia tan fresca y dinámica como un sport, que eleva la sensación de ser uno con tu Mazda 2</li>
+                <li><strong>Velocidades</strong>: 6 MT/AT</li>
+                <li><strong>Motor</strong>: 1,5L MOTOR SKYACTIV-G</li>
+                <li><strong>MAZDA CON­NECT</strong></li>
+                <li><strong>SISTEMAS DE SEGURIDAD PROACTIVA</strong></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>NUEVO MAZDA 2 SPORT CARBON EDITION</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                <b>Un compacto pensado para aquellos que buscan disfrutar cada camino.</b>  Detalles en negro en su exterior y rojos en su interior que hacen de cada salida,  una  experiencia al volante única y divertida.
               </p>
             </div>
           </div>
