--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li><a class="nav-link scrollto" href="#services">SERVICIOS</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="blog.html">BLOG</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -86,7 +86,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>-->
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#contact">CONTACTO</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -367,7 +367,7 @@
 
         <div class="row">
 
-          <div class="col-lg-5 align-items-stretch position-relative video-box" style='background-image: url("assets/img/why-us.jpg");' data-aos="fade-right">
+          <div class="col-lg-12 align-items-stretch position-relative video-box" style='background-image: url("assets/img/mazda_cx30.jpg");' data-aos="fade-right">
             <a href="https://www.youtube.com/watch?v=UyoZA0FvZfI" class="glightbox play-btn mb-4"></a>
           </div>
 
