Preguntas frecuentes y Servicios

--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
 
         <div class="row" data-aos="zoom-in">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3>VIVE LA EXPERIENCIA DE CONDUCCIÓN ÚNICA DE MAZDA</h3>
+            <p>La maestría de nuestros artesanos es un elemento esencial a la hora de trabajar el diseño como un arte. Cuando conduces un vehículo Mazda, sentirás nuestra pasión y compromiso con la creación de vehículos con alma.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle" href="#contact">CONTACTA UN ASESOR</a>
           </div>
         </div>
 
@@ -318,8 +318,8 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              <b >DE HU­MANOS</b><br>
+              Alma, esa palabra infinita y profunda que almacena años de experiencias vividas, desafíos superados y aprendizajes recibidos, es la que le da vida a cada cosa que hacemos en Mazda.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
@@ -329,9 +329,8 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+              <b>PARA HU­MANOS</b><br>
+              Solo las manos humanas pueden darle vida a cada parte de un Mazda, por eso detrás de cada detalle, hay una consagrada dedicación para hacer de tu vehículo una pieza de arte que toque tu corazón y se conecte con tu grandeza.
             </p>
             <a href="#" class="btn-learn-more">Learn More</a>
           </div>
@@ -424,51 +423,30 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Services</h2>
+          <h2>SERVICIOS</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
-          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <i class="bi bi-card-checklist"></i>
-              <h4><a href="#">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4><a href="#">MANTENIMIENTOS Y SERVICIOS RÁPIDOS</a></h4>
+              <p>Para continuar disfrutando de una experiencia de manejo sin igual, es necesario realizar un mantenimiento periódicamente y reemplazar las partes que se van desgastando con el tiempo.</p>
             </div>
           </div>
-          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-md-12 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <i class="bi bi-bar-chart"></i>
-              <h4><a href="#">Dolor Sitema</a></h4>
-              <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4><a href="#">DIAGNÓSTICOS Y REPARACIONES ESPECIALIZADAS</a></h4>
+              <p>Nadie mejor que nuestros técnicos entrenados y certificados para diagnosticar y reparar los sistemas más complejos: reparaciones de motor, reparaciones de transmisión o reparaciones de dirección y suspensión, entre otras.</p>
             </div>
           </div>
-          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-md-12 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <i class="bi bi-binoculars"></i>
-              <h4><a href="#">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-            </div>
-          </div>
-          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon-box">
-              <i class="bi bi-brightness-high"></i>
-              <h4><a href="#">Nemo Enim</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-          </div>
-          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon-box">
-              <i class="bi bi-calendar4-week"></i>
-              <h4><a href="#">Magni Dolore</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-          </div>
-          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon-box">
-              <i class="bi bi-briefcase"></i>
-              <h4><a href="#">Eiusmod Tempor</a></h4>
-              <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4><a href="#">LÁMINA Y PINTURA</a></h4>
+              <p>Reparar las líneas y los colores que tan cuidadosamente fueron diseñados para dar vida a los vehículos, requiere de personal experto, técnicas y equipos especializados, capaces de ofrecerte la mejor calidad.</p>
             </div>
           </div>
         </div>
@@ -481,52 +459,62 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title section-title-faq">
-          <h2>Frequently Asked Questions</h2>
+          <h2>PREGUNTAS FRECUENTES</h2>
         </div>
 
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">¿DONDE PUEDO OBTENER INFORMACIÓN SOBRE LOS VEHÍCULOS? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  La venta de vehículos se realiza únicamente a través de la red de concesionarios Mazda. Ellos te podrán informar acerca de la disponibilidad, precios e información técnica.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">¿QUÉ COBERTURA DE GARANTÍA TIENE MI VEHÍCULO? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                  Los automóviles y SUV tienen una cobertura de 3 años sin límite de kilometraje. Las pick- up tienen una cobertura de 3 años o 100.000 kilómetros, lo que ocurra primero. 
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">¿CUÁL ES EL CONSUMO DE COMBUSTIBLE DE LOS VEHÍCULOS MAZDA? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                  Mazda de Colombia no tiene establecidos valores exactos de consumo para sus vehículos, pues el rendimiento del combustible entre vehículos puede variar drásticamente, dependiendo de las siguientes condiciones: aumento en la densidad o volumen del tráfico, condiciones y tipo de la vía; si  es plana o tiene pendientes en ascenso o descenso, si es destapada o está cubierta con pavimento, etc.; condiciones habituales de carga del vehículo; si está vacío o cargado, especificaciones de las llantas y presión de aire en las mismas, condiciones ambientales; viento a favor o en contra, si hay lluvia o no, etc.; altura sobre el nivel del mar, hábitos de conducción (régimen de revoluciones, condiciones de aceleración bruscas, realizar cambios de marcha inadecuados), temperatura ambiente, octanaje de la gasolina, uso del aire acondicionado (opcional), mantenimiento del vehículo y repuestos utilizados en el mismo.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">¿QUÉ ES TECNOLOGÍA SKYACTIV? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
+                  SKYACTIV es el grupo de innovaciones tecnológicas desarrolladas por Mazda Motor Corporation, las cuales redefinen desde cero todos los componentes del vehículo, con un objetivo común: extraer la mayor cantidad de energía del combustible y llevarla a las ruedas, disminuyendo al máximo las pérdidas. Con desarrollos innovadores en motor, transmisión, carrocería, suspensión, dirección y frenos, la Tecnología SKYACTIV ofrece mayor economía de combustible, menos emisiones contaminantes, mayor torque y una carrocería más ligera pero mucho más resistente.
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up" data-aos-delay="400">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">¿QUÉ ES TECNOLOGÍA I-ACTIVESENSE? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  i-ACTIVSENSE es un conjunto de avanzadas tecnologías de seguridad activa, que le permiten al vehículo actuar en situaciones de riesgo. Están diseñadas para informar, alertar y proteger, creando un entorno donde el conductor puede reconocer, evaluar y reaccionar con precisión ante condiciones inesperadas de la carretera y del tráfico.
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="500">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-6" class="collapsed">¿QUÉ ES MAZDA CONNECT? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-6" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
+                  Mazda Connect es conectividad e interacción con el camino y el mundo sin comprometer tu seguridad. Con el Botón Multicomando, ubicado en la consola central, podrás acceder rápidamente a funciones de cambio de emisora, acceso directo al navegador y a favoritos (contactos, lugares y música); así mismo, acceder a las opciones de configuración del vehículo.  
+                  La Pantalla TFT se encuentra ubicada en la parte superior del panel de instrumentos, de tal forma que reduce el ángulo de visión hacia abajo, mientras que la Pantalla Activa de Conducción, ahora a color, se encuentra ubicada dentro del campo visual del conductor y muestra información esencial de manejo. Mazda Connect ahora es compatible con Android Auto™ (funcional también con equipos móviles iPhone®).
                 </p>
               </div>
             </li>
