--- a/index.html
+++ b/index.html
@@ -66,26 +66,7 @@
           <li><a class="nav-link scrollto " href="#portfolio">VEHÍCULOS</a></li>
           <li><a class="nav-link scrollto" href="#about">SOBRE NOSOTROS</a></li>
           <li><a class="nav-link scrollto" href="#services">SERVICIOS</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
           <li><a href="blog.html">BLOG</a></li>
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>-->
           <li><a class="nav-link scrollto" href="#contact">CONTACTO</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -430,21 +411,21 @@
         <div class="row">
           <div class="col-md-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <i class="bi bi-card-checklist"></i>
+              <i class="bx bxs-wrench"></i>
               <h4><a href="#">MANTENIMIENTOS Y SERVICIOS RÁPIDOS</a></h4>
               <p>Para continuar disfrutando de una experiencia de manejo sin igual, es necesario realizar un mantenimiento periódicamente y reemplazar las partes que se van desgastando con el tiempo.</p>
             </div>
           </div>
           <div class="col-md-12 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
-              <i class="bi bi-bar-chart"></i>
+              <i class='bx bxs-cog'></i>
               <h4><a href="#">DIAGNÓSTICOS Y REPARACIONES ESPECIALIZADAS</a></h4>
               <p>Nadie mejor que nuestros técnicos entrenados y certificados para diagnosticar y reparar los sistemas más complejos: reparaciones de motor, reparaciones de transmisión o reparaciones de dirección y suspensión, entre otras.</p>
             </div>
           </div>
           <div class="col-md-12 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
-              <i class="bi bi-binoculars"></i>
+              <i class='bx bxs-color-fill'></i>
               <h4><a href="#">LÁMINA Y PINTURA</a></h4>
               <p>Reparar las líneas y los colores que tan cuidadosamente fueron diseñados para dar vida a los vehículos, requiere de personal experto, técnicas y equipos especializados, capaces de ofrecerte la mejor calidad.</p>
             </div>
@@ -600,12 +581,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>Nuestro Boletín</h4>
+            <p>Deja tu correo para mantenerte informado de las novedades de Mazda</p>
           </div>
           <div class="col-lg-6">
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input type="email" name="email"><input type="submit" value="Subscríbete">
             </form>
           </div>
         </div>
@@ -617,29 +598,29 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>NAVEGACIÓN</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Sobre nosotros</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Servicios</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Terminos de servicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Politicas de privacidad</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>ENLACES DE INTERÉS</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Noticias</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Mazda Global</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Fichas técnicas</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Historial Mazda</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Revistas Mazda stories</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
+            <h4>CONTÁCTANOS</h4>
             <p>
               A108 Adam Street <br>
               New York, NY 535022<br>
@@ -651,7 +632,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Anyar</h3>
+            <h3>Sobre Mazda</h3>
             <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
