Ajustes Sobre nosotros Footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </div>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center ">
+  <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
       
       <h1 class="logo"><a href="index.html">Mazda</a></h1>
@@ -293,25 +293,25 @@
 
         <div class="section-title">
           <h2>SOBRE NOSOTROS</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Estamos trabajando activamente para mejorar siempre nuestros productos y a la vez estamos comprometidos en la búsqueda permanente de valores que mejoren tu experiencia y satisfacción. El perfecto funcionamiento de tu vehículo es nuestra prioridad.</p>
         </div>
 
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              <b >DE HU­MANOS</b><br>
-              Alma, esa palabra infinita y profunda que almacena años de experiencias vividas, desafíos superados y aprendizajes recibidos, es la que le da vida a cada cosa que hacemos en Mazda.
+              <b >Visión corporativa</b><br>
+              Nos encantan los autos y queremos que las personas disfruten de vidas plenas a través de los autos, visualizamos autos que existen de manera sostenible con la tierra y la sociedad y continuaremos enfrentando desafíos con ideas creativas.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> Mejorar la vida de las personas a través de la propiedad de un automóvil.</li>
+              <li><i class="ri-check-double-line"></i> Ofrecer autos sustentables con la tierra y la sociedad a más personas.</li>
+              <li><i class="ri-check-double-line"></i> Acepte los desafíos y busque dominar el Doh ("Camino" o "Camino") de la creatividad.</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              <b>PARA HU­MANOS</b><br>
-              Solo las manos humanas pueden darle vida a cada parte de un Mazda, por eso detrás de cada detalle, hay una consagrada dedicación para hacer de tu vehículo una pieza de arte que toque tu corazón y se conecte con tu grandeza.
+              <b>Esencia de marca "Celebrar la conducción"</b><br>
+              La esencia de la marca Mazda es "Celebrar la conducción". “Celebrate Driving” ofrecido por Mazda no se trata solo de desempeño de conducción. Elegir un Mazda premia al propietario con confianza y orgullo. Conducir un Mazda que conduce a la urgencia de asumir nuevos retos. No solo nuestros productos, sino cada encuentro con Mazda evoca la emoción del movimiento y hace que el corazón de los clientes lata de emoción. Todo esto está contenido en nuestra esencia de marca de “Celebrate Driving”.
             </p>
             <!-- <a href="#" class="btn-learn-more">Learn More</a> -->
           </div>
@@ -405,7 +405,6 @@
 
         <div class="section-title">
           <h2>SERVICIOS</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -626,9 +625,6 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>CONTÁCTANOS</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
               <strong>Phone:</strong> +57 5589 55488 55<br>
               <strong>Email:</strong> mazda@mazdacontact.com<br>
             </p>
@@ -636,8 +632,8 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>Sobre Mazda</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <h3>Mazda</h3>
+            <p>Estamos trabajando activamente para mejorar siempre nuestros productos y a la vez estamos comprometidos en la búsqueda permanente de valores que mejoren tu experiencia y satisfacción. El perfecto funcionamiento de tu vehículo es nuestra prioridad.</p>
             <div class="social-links mt-3">
               <a href="https://twitter.com/mazdacolombia" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="https://www.facebook.com/mazdacolombia/" class="facebook"><i class="bx bxl-facebook"></i></a>
