--- a/mazda2sport-details.html
+++ b/mazda2sport-details.html
@@ -145,12 +145,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>Nuestro Boletín</h4>
+            <p>Deja tu correo para mantenerte informado de las novedades de Mazda</p>
           </div>
           <div class="col-lg-6">
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input type="email" name="email"><input type="submit" value="Subscríbete">
             </form>
           </div>
         </div>
@@ -162,51 +162,48 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>NAVEGACIÓN</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Sobre nosotros</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Servicios</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Terminos de servicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Politicas de privacidad</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>ENLACES DE INTERÉS</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Noticias</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Mazda Global</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Fichas técnicas</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Historial Mazda</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Revistas Mazda stories</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
+            <h4>CONTÁCTANOS</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong> +57 5589 55488 55<br>
+              <strong>Email:</strong> mazda@mazdacontact.com<br>
             </p>
 
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Anyar</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <h3>Mazda</h3>
+            <p>Estamos trabajando activamente para mejorar siempre nuestros productos y a la vez estamos comprometidos en la búsqueda permanente de valores que mejoren tu experiencia y satisfacción. El perfecto funcionamiento de tu vehículo es nuestra prioridad.</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://twitter.com/mazdacolombia" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://www.facebook.com/mazdacolombia/" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.instagram.com/mazdacolombia/" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/mazda-colombia/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.youtube.com/user/mazdacolombia" class="youtube"><i class="bx bxl-youtube"></i></a>
+
             </div>
           </div>
-
         </div>
       </div>
     </div>
