--- a/index.html
+++ b/index.html
@@ -522,19 +522,18 @@
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
                 <button class="btn btn-outline-danger" type="button">Encuentra un concesionario</button>
-                <!-- <p>A108 Adam Street, New York, NY 535022</p> -->
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>mazda@mazdacontact.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+57 5589 55488 55s</p>
               </div>
 
             </div>
@@ -556,17 +555,22 @@
                 <input type="email" class="form-control" name="email" id="email" placeholder="Correo electronico" required>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto" required>
+                <input type="number" class="form-control" name="subject" id="subject" placeholder="Celular" required>
+              </div>
+              <div class="form-group mt-3" role="group" aria-label="#">
+                <button type="button" class="btn btn-outline-danger">Agenda tu prueba de manejo</button>
+                <button type="button" class="btn btn-outline-danger">Cotiza tu vehiculo</button>
+                <button type="button" class="btn btn-outline-danger">Conoce mas de tu vehiculo</button>
               </div>
               <div class="form-group mt-3">
                 <textarea class="form-control estilota" name="message" rows="5" placeholder="Mensaje" required></textarea>
               </div>
-              <div class="my-3">
+              <!--<div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              </div>-->
+              <div href="#" class="text-center"><button type="submit">Enviar</button></div>
             </form>
 
           </div>
