--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
           <li><a class="nav-link scrollto " href="#portfolio">VEHÍCULOS</a></li>
           <li><a class="nav-link scrollto" href="#about">SOBRE NOSOTROS</a></li>
           <li><a class="nav-link scrollto" href="#services">SERVICIOS</a></li>
-          <li><a href="blog.html">BLOG</a></li>
           <li><a class="nav-link scrollto" href="#contact">CONTACTO</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -569,7 +568,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>-->
-              <div href="#" class="text-center"><button type="submit">Enviar</button></div>
+              <div class="text-center"><button type="submit" onclick="location.href='thank-you-page.html'">Enviar</button></div>
             </form>
 
           </div>
