--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <i class="bi bi-phone-fill phone-icon"></i> +57 5589 55488 55
       </div>
       <div class="cta d-none d-md-block">
-        <a href="#about" class="scrollto">Contacta un asesor</a>
+        <a href="#contact" class="scrollto">Contacta un asesor</a>
       </div>
     </div>
   </div>
