--- a/index.html
+++ b/index.html
@@ -557,6 +557,13 @@
                 <input type="number" class="form-control" name="subject" id="subject" placeholder="Celular" required>
               </div>
               <div class="form-group mt-3" role="group" aria-label="#">
+                <p>Elije por donde quieres que te contactemos:</p>
+                <button type="button" class="btn btn-outline-danger">Email</button>
+                <button type="button" class="btn btn-outline-danger">Whatsapp</button>
+                <button type="button" class="btn btn-outline-danger">Llamada</button>
+              </div>
+              <div class="form-group mt-3" role="group" aria-label="#">
+                <p>Que servicio quieres consultar:</p>
                 <button type="button" class="btn btn-outline-danger">Agenda tu prueba de manejo</button>
                 <button type="button" class="btn btn-outline-danger">Cotiza tu vehiculo</button>
                 <button type="button" class="btn btn-outline-danger">Conoce mas de tu vehiculo</button>
