--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <!-- Slide 3 -->
       <div class="carousel-item">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Conoce la experiancia Mazda</h2>
+          <h2 class="animate__animated animate__fadeInDown">Conoce la experiencia Mazda</h2>
           <p class="animate__animated animate__fadeInUp">Visita nuestro blog, conoce las nuevas novedades en mazda y conoce la experiencia mazda de primera mano por parte de nuestros clientes.</p>
         </div>
       </div>
@@ -124,32 +124,32 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">Una experiencia de manejo superior</a></h4>
+              <p class="description">Nuestros vehículos los construyen artesanos perspicaces e ingenieros obsesionados con los detalles que desean elevar tu estilo de vida cada vez que te sientas detrás del volante.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title"><a href="">La fuerza del espiritu humano</a></h4>
+              <p class="description">La ciudad natal de Mazda, Hiroshima, es conocida por su increíble espíritu competitivo. Como un fénix que se levanta, la gente de Hiroshima reconstruyó su ciudad amada desde los cimientos.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">Enfoque integral hacia la conduccion</a></h4>
+              <p class="description">Creemos que los vehículos deben diseñarse para maximizar la dinámica y la eficiencia de conducción: desde la construcción de la carrocería y la tecnología del motor hasta el chasis y la transmisión.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">Imaginamos lo impensado</a></h4>
+              <p class="description">Esta es la pregunta que nuestros diseñadores se hacen cuando miran fijamente una página en blanco. Al principio, todo es posible.</p>
             </div>
           </div>
 
