--- a/index.html
+++ b/index.html
@@ -470,15 +470,15 @@
               <div  class="form-group mt-3">
                 <p>Como quieres que te contactemos:</p>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                  <input class="form-check-input checkbox-input" type="checkbox" id="inlineCheckbox1" value="option1">
                   <label class="form-check-label" for="inlineCheckbox1">Llamada</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                  <input class="form-check-input checkbox-input" type="checkbox" id="inlineCheckbox2" value="option2">
                   <label class="form-check-label" for="inlineCheckbox2">Whatsapp</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                  <input class="form-check-input checkbox-input" type="checkbox" id="inlineCheckbox3" value="option3">
                   <label class="form-check-label" for="inlineCheckbox3">Llamada</label>
                 </div>
               </div>
@@ -486,15 +486,15 @@
               <div  class="form-group mt-3">
                 <p>Que servicio quieres consultar:</p>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input check-ajustar" type="checkbox" id="inlineCheckbox1" value="option1">
+                  <input class="form-check-input checkbox-input" type="checkbox" id="inlineCheckbox1" value="option1">
                   <label class="form-check-label" for="inlineCheckbox1">Agenda tu prueba de manejo</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                  <input class="form-check-input checkbox-input" type="checkbox" id="inlineCheckbox2" value="option2">
                   <label class="form-check-label" for="inlineCheckbox2">Cotiza tu vehiculo</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                  <input class="form-check-input checkbox-input" type="checkbox" id="inlineCheckbox3" value="option3">
                   <label class="form-check-label" for="inlineCheckbox3">Conoce mas de tu vehiculo</label>
                 </div>
               </div>
