--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 </div>
               </div>
               <div class="form-group mt-3">
-                <select lass="form-select" name="documento" id="documento">
+                <select class="form-select form-select-lg mb-2 select-text" name="documento" id="documento">
                   <option selected>Tipo de documento</option>
                   <option value="">Cedula de ciudania</option>
                   <option value="">Cedula extranjeria</option>
@@ -497,6 +497,35 @@
                   <input class="form-check-input checkbox-input" type="checkbox" id="inlineCheckbox3" value="option3">
                   <label class="form-check-label" for="inlineCheckbox3">Conoce mas de tu vehiculo</label>
                 </div>
+              </div>
+              <div class="form-group mt-3">
+                <select class="form-select form-select-lg mb-2 select-text" name="documento" id="documento">
+                  <option selected>Selecciona ciudad</option>
+                  <option value="">Armenia</option>
+                  <option value="">Barrancabermeja</option>
+                  <option value="">Barranquilla</option>
+                  <option value="">Bogota D.C</option>
+                  <option value="">Bucaramanga</option>
+                  <option value="">Cali</option>
+                  <option value="">Cartagena</option>
+                  <option value="">Chia</option>
+                  <option value="">Bucaramanga</option>
+                  <option value="">Cucuta</option>
+                  <option value="">Ibague</option>
+                  <option value="">Manizales</option>
+                  <option value="">Medellin</option>
+                  <option value="">Monteria</option>
+                  <option value="">Neiva</option>
+                  <option value="">Pasto</option>
+                  <option value="">Pereira</option>
+                  <option value="">Popayan</option>
+                  <option value="">Santa Marta</option>
+                  <option value="">Sincelejo</option>
+                  <option value="">Tunja</option>
+                  <option value="">Valledupar</option>
+                  <option value="">Villavicencio</option>
+                  <option value="">Yopal</option>
+                </select>
               </div>
               <div class="form-group mt-3">
                 <textarea class="form-control estilota" name="message" rows="5" placeholder="Mensaje" required></textarea>
