--- a/index.html
+++ b/index.html
@@ -73,21 +73,22 @@
 
   <!-- ======= Seccion Banner ======= -->
   <section id="hero" class="d-flex justify-cntent-center align-items-center">
-    <div id="heroCarousel" data-bs-interval="5000" class="container carousel carousel-fade" data-bs-ride="carousel">
+      <div id="heroCarousel" data-bs-interval="5000" class="container carousel carousel-fade" data-bs-ride="carousel">
 
-      <!-- Slide 1 -->
-      <div class="carousel-item active">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Bienvenido a <span>Mazda</span></h2>
-          <p class="animate__animated animate__fadeInUp">En mazda fabricamos autos que hacen que la conducción importe. Es por eso que diseñamos cada Mazda para inspirar, emocionar y, sobre todo, para alegrar a la gente. Esta filosofía guía todo lo que hacemos. Desde la tecnología, hasta el diseño y la seguridad.</p>
+        <!-- Slide 1 -->
+        <div class="carousel-item active">
+          <div class="carousel-container">
+            <h2 class="animate__animated animate__fadeInDown">Bienvenido a <span>Mazda</span></h2>
+            <p class="animate__animated animate__fadeInUp">En mazda fabricamos autos que hacen que la conducción importe. Es por eso que diseñamos cada Mazda para inspirar, emocionar y, sobre todo, para alegrar a la gente. Esta filosofía guía todo lo que hacemos. Desde la tecnología, hasta el diseño y la seguridad.</p>
+          </div>
         </div>
-      </div>
 
-      <!-- Slide 2 -->
-      <div class="carousel-item">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Conoce nuestros Hibridos</h2>
-          <p class="animate__animated animate__fadeInUp">Nuestros motores e-Skyactiv G con el sistema Mazda Mild Hybrid producen menos emisiones de CO2 a la vez que logran un rendimiento excepcional y se complementan para respaldar la eficiencia y el rendimiento del vehículo en cada camino, dándote además de eficiencia superior, un importante ahorro de combustible.</p>
+        <!-- Slide 2 -->
+        <div class="carousel-item">
+          <div class="carousel-container">
+            <h2 class="animate__animated animate__fadeInDown">Conoce nuestros Hibridos</h2>
+            <p class="animate__animated animate__fadeInUp">Nuestros motores e-Skyactiv G con el sistema Mazda Mild Hybrid producen menos emisiones de CO2 a la vez que logran un rendimiento excepcional y se complementan para respaldar la eficiencia y el rendimiento del vehículo en cada camino, dándote además de eficiencia superior, un importante ahorro de combustible.</p>
+          </div>
         </div>
       </div>
 
@@ -107,9 +108,7 @@
       <!-- Boton Derech -->
       <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
-      </a>
-
-    </div>
+      </a>   
   </section>
   <!-- Fin del Banner -->
 
@@ -471,7 +470,7 @@
                 <p>Como quieres que te contactemos:</p>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input checkbox-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                  <label class="form-check-label" for="inlineCheckbox1">Llamada</label>
+                  <label class="form-check-label" for="inlineCheckbox1">Correo</label>
                 </div>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input checkbox-input" type="checkbox" id="inlineCheckbox2" value="option2">
@@ -615,7 +614,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Mazda</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Mazda</span></strong>. All Rights Reserved to <strong>Team Shelby</strong>
       </div>
     </div>
   </footer>
