--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
+                <h4>Ubicacion:</h4>
                 <button class="btn btn-outline-danger" type="button">Encuentra un concesionario</button>
               </div>
 
@@ -431,7 +431,7 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
+                <h4>Telefono:</h4>
                 <p>+57 5589 55488 55s</p>
               </div>
             </div>
