--- a/index.html
+++ b/index.html
@@ -288,8 +288,24 @@
       <div class="container-fluid">
 
         <div class="row">
-          <div class="col-lg-12 align-items-stretch position-relative video-box" style='background-image: url("assets/img/mazda_cx30.jpg");' data-aos="fade-right">
+          <div class="col-lg-6 align-items-stretch position-relative video-box" style='background-image: url("assets/img/mazda_cx30.jpg");' data-aos="fade-right">
             <a href="https://www.youtube.com/watch?v=UyoZA0FvZfI" class="glightbox play-btn mb-4"></a>
+          </div>
+          <div class="col-lg-6 align-items-stretch position-relative fondo">
+            <div class="section-title hibrid">
+              <h2>
+                HÍBRIDOS MAZDA:
+                EL BALANCE PERFECTO ENTRE DOS TECNOLOGÍAS: SKYACTIV Y MILD HYBRID
+              </h2>
+              <p>
+                Nuestros motores e-Skyactiv G con el sistema Mazda Mild Hybrid producen menos emisiones de CO2 a la vez que logran un 
+                rendimiento excepcional y se complementan para respaldar la eficiencia 
+                y el rendimiento del vehículo en cada camino, dándote además de eficiencia superior, un importante ahorro de combustible.
+              </p>
+              <div class="hibrid">
+                <button class="btn btn-outline-danger" type="button">Saber Mas</button>
+              </div>
+            </div>
           </div>
         </div>
 
